--- a/app/assets/stylesheets/pages/deals_page.scss
+++ b/app/assets/stylesheets/pages/deals_page.scss
@@ -108,9 +108,12 @@
   }
 
   &.wrapper-home-search-deal {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 25px 22px 10px 22px;
     position: absolute;
     width: 100%;
     margin-top: 50px;
+    bottom: -55px;
 
     .no-border-radius {
       @include border-radius(0px);
